--- a/src/partials/modal-team.html
+++ b/src/partials/modal-team.html
@@ -5,7 +5,7 @@
       <h2 lang="en" class="ourteam__title">Our Team</h2>
       <a
         class="ref__github"
-        href="https://github.com/Alexf17/Devs-ua-Project-JS"
+        href="https://github.com/Alexf17/filmoteka"
         target="_blank"
         rel="noreferrer noopener"
         aria-label="Our Github"
